Fixing Spacing

--- a/styles.css
+++ b/styles.css
@@ -29,8 +29,8 @@
 }
 
 .myImage img {
-  max-width: 200px; /* image can fill the width of the container */
-  max-height: 250px; /* image won’t overflow vertically */
+  max-width: 500px; /* image can fill the width of the container */
+  max-height: 300px; /* image won’t overflow vertically */
   height: auto;     /* maintain aspect ratio */
   width: auto;      /* maintain aspect ratio */
 }
